--- a/R/p11_GAP_Bootstrap_Enrichment_07_02_2017.Rmd
+++ b/R/p11_GAP_Bootstrap_Enrichment_07_02_2017.Rmd
@@ -43,35 +43,31 @@ output_dir <-"./P11_glmnet_bootstrap/output/"
 figs_dir <-"./P11_glmnet_bootstrap/figs/"
 
 
-#Pre and post fixes.
-project_name = "glmnet_boot"
+##### Set up #####
+#project name defined
+project_name = "glmnet_enrichment"
 project_id = "p11_"
 
 ```
 
-
-
-# Missclassification
-```{r misclassification calculations}
-
-##### Set up #####
-#project name defined
-project_name = "glmnet_missclass"
-#Gene expression data to use. 
-GX_data<-GX_DF_adj[1:27]
-```
-
-
-#################### Enrichment final models. 
+# Enrichment final models. 
 ```{r Enrichment}
 
 #Load data
 glmnet_all_predictors<-read.csv(paste(output_dir,"p11_glmnet_boot_glmnet_all_mod_predictors.csv",sep=""))
+```
+
+
+# Enrichment final models. 
+```{r Enrichment}
+
 
 glmnet_all_predictors
 
 
 #Make venn diagram of overlap. For Gx, Gx_scz, PRS, PRS_Gx?
+
+
 
 
 #Enrichments Gx and Gx_scz and PRS.
