Venn diagram function added

--- a/R/p11_GAP_Bootstrap_Enrichment_07_02_2017.Rmd
+++ b/R/p11_GAP_Bootstrap_Enrichment_07_02_2017.Rmd
@@ -24,11 +24,35 @@ library(lubridate)
 library(reshape)
 library(tableone)
 library(stargazer)
+library(VennDiagram)
 
 ```
 
 #Functions
 ```{r define functions, tidy=TRUE}
+#venn Diagram function
+plotVennDia <- function(a, ...) {
+    grid.newpage()
+    if (length(a) == 1) {
+        out <- draw.single.venn(likes(a), ...)
+    }
+    if (length(a) == 2) {
+        out <- draw.pairwise.venn(likes(a[1]), likes(a[2]), likes(a[1:2]), ...)
+    }
+    if (length(a) == 3) {
+        out <- draw.triple.venn(likes(a[1]), likes(a[2]), likes(a[3]), likes(a[1:2]), 
+            likes(a[2:3]), likes(a[c(1, 3)]), likes(a), ...)
+    }
+    if (length(a) == 4) {
+        out <- draw.quad.venn(likes(a[1]), likes(a[2]), likes(a[3]), likes(a[4]), 
+            likes(a[1:2]), likes(a[c(1, 3)]), likes(a[c(1, 4)]), likes(a[2:3]), 
+            likes(a[c(2, 4)]), likes(a[3:4]), likes(a[1:3]), likes(a[c(1, 2, 
+                4)]), likes(a[c(1, 3, 4)]), likes(a[2:4]), likes(a), ...)
+    }
+    if (!exists("out")) 
+        out <- "Oops"
+    return(out)
+}
 
 
 ```
