--- a/R/p11_GAP_Bootstrap_Enrichment_07_02_2017.Rmd
+++ b/R/p11_GAP_Bootstrap_Enrichment_07_02_2017.Rmd
@@ -54,6 +54,23 @@ plotVennDia <- function(a, ...) {
     return(out)
 }
 
+#Venn Diagram helper fun
+likes <- function(animals) {
+    ppl <- 
+    names(ppl) <- c("p", "d", "c", "s", "l")
+    for (i in 1:length(animals)) {
+        ppl <- subset(ppl, ppl[animals[i]] == T)
+    }
+    nrow(ppl)
+}
+
+
+unique(glmnet_all_predictors$Variables)
+
+
+
+glmnet_all_predictors[glmnet_all_predictors$Model == "1_Gx",2]%in%glmnet_all_predictors[glmnet_all_predictors$Model == "2_Gx_Scz",2]
+
 
 ```
 
@@ -74,23 +91,66 @@ project_id = "p11_"
 
 ```
 
-# Enrichment final models. 
-```{r Enrichment}
+#  Load predictors
+```{r Predictor lists}
 
 #Load data
 glmnet_all_predictors<-read.csv(paste(output_dir,"p11_glmnet_boot_glmnet_all_mod_predictors.csv",sep=""))
+
+#change value 1 to PRS_0.1 needed for true false df for venn diagram. 
+glmnet_all_predictors[2]<-replace(glmnet_all_predictors[2], glmnet_all_predictors[2]==1, "PRS_0.1")
+
+#vector of model ids
+modelID<-c("1_Gx","2_Gx_Scz","3_PRS","4_Demographics","5_PRS_Demo","6_Gx_PRS","7_Gx_Demo","8_Gx_Demo_PRS")
+
+```
+
+
+
+# Venn Diagram 
+```{r Enrichment}
+
+grid.newpage()
+draw.triple.venn(area1 = 22, area2 = 20, area3 = 13, n12 = 11, n23 = 4, n13 = 5, 
+    n123 = 1, category = c("Dog People", "Cat People", "Lizard People"), lty = "blank", 
+    fill = c("skyblue", "pink1", "mediumorchid"))
+
+
+plotVennDia(c("d", "c", "l"), category = c("Dog People", "Cat People", "Lizard People"), 
+    lty = "blank", fill = c("skyblue", "pink1", "mediumorchid"))
 ```
 
 
 # Enrichment final models. 
 ```{r Enrichment}
 
+table(glmnet_all_predictors$Variables)
 
-glmnet_all_predictors
+table(glmnet_all_predictors$Model)
+ 
+glmnet_all_predictors[glmnet_all_predictors$Model == "1_Gx",2]%in%glmnet_all_predictors[glmnet_all_predictors$Model == "2_Gx_Scz",2]
 
 
 #Make venn diagram of overlap. For Gx, Gx_scz, PRS, PRS_Gx?
 
+
+#drop factors
+allpredictors<- data.frame(lapply(glmnet_all_predictors, as.character), stringsAsFactors=F)
+
+#Get unique predictors
+allpredictorsUnique<-unique(allpredictors[2])
+
+
+
+
+#loop to add false true for each
+for (i in 1:length(modelID)){
+  temp<-filter(glmnet_all_predictors, Model == modelID[i])[2]
+  allpredictorsUnique[,modelID[i]]<-allpredictorsUnique[,1] %in% temp[,1]
+}
+
+rownames(allpredictorsUnique)<-allpredictorsUnique[,1]
+allpredictorsUnique<-allpredictorsUnique[,c(2:9,1)]
 
 
 
@@ -100,51 +160,3 @@ glmnet_all_predictors
 
 ```
 
-## Under Construction ##########################################################################################
-```{r}
-###################################################################################
-## Under Construction
-#pick model and name
-input_model=glmnet_fit_b
-input_model_name="glm"
-#use model to predict training data
-predict_fit<-predict.train(input_model, newdata = GX_DF_full_adj)
-cmatrix<-confusionMatrix(predict_fit, GX_DF_full_adj$Phenotype)
-matrixout<-data.frame(c(cmatrix$overall,cmatrix$byClass))
-#save metrics
-write.table(t(matrixout), file=paste(output_dir,project_id,project_name,"glmnet_confusionout.csv",sep=""),row.names=F,quote=FALSE,sep = ",")
-
-
-#make dataframes
-model_strat_confuse_df<-create_table_df(GX_DF_full_adj,27,predict_fit)
-#plot tables
-table_fun_ml(model_strat_confuse_df,input_model_name)
-
-
-#modellist<- list(HF_glm=p1_glm,HD_glm=p2_glm)
-
-#p1data<-p1_glm$pred
-#str(p1_glm$pred)
-#table(p1data$lambda)
-
-#p1filter<-filter(p1data,alpha== 0.1)
-#p1filter<-filter(p1filter,lambda < 0.0105)
-dim(p1filter)
-table(p1filter$rowIndex)
-
-smallp1<-p1filter[!duplicated(p1filter$rowIndex),]
-dim(smallp1)
-smallsort<-arrange(smallp1,rowIndex)
-
-cbind(smallsort[,1:3],expressionRFE$Phenotype)
-
-
-
-title = "Density Plots Stratified by Control and FEP"
-ggplot(metric_plot2, aes(Percentage, colour = Phenotype)) +
-  geom_density(alpha=0.01)+
-  facet_wrap(~ )+
-  ggtitle(title)
-
-
-```
